--- a/src/index.css
+++ b/src/index.css
@@ -315,6 +315,13 @@
   height: 80px;
  }
 
+ .toast-error-inside{
+  margin-top: 80px;
+  height: 80px;
+ }
+
+
+
  .toast-success{
   height: 80px;
  }
